--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" media="all" href="css/reset.css">
-  <link rel="stylesheet" media="all" href="css/style.css">
+  <link rel="stylesheet" media="all" href="css/style.min.css">
 </head>
 <body>
 <svg style="display: none" xmlns="http://www.w3.org/2000/svg">
@@ -57,14 +56,14 @@
         <picture>
           <source srcset="/img/logo-sedona-desktop.svg" media="(min-width: 1200px)">
           <source srcset="/img/logo-sedona-tablet.svg" media="(min-width: 768px)">
-          <img src="/img/logo-sedona-mobile.svg">
+          <img src="/img/logo-sedona-mobile.svg" alt="" width="102" height="84">
         </picture>
       </a>
     </div>
   </header>
   <section class="main-img">
     <div class="main-img__text">
-      <img src="/img/text-sedona-index.svg" alt="">
+      <img src="/img/text-sedona-index.svg" alt="" width="280" height="218">
     </div>
   </section>
   <section class="intro">
@@ -88,7 +87,7 @@
           <source srcset="/img/photo-city-tablet@1x.jpg 1x, /img/photo-city-tablet@2x.jpg 2x"
                   media="(min-width: 768px)">
           <source srcset="/img/photo-city-mobile@2x.jpg 2x" media="(max-width: 767px)">
-          <img src="/img/photo-city-mobile@1x.jpg">
+          <img src="/img/photo-city-mobile@1x.jpg" alt="" width="320" height="260">
         </picture>
       </div>
     </div>
@@ -126,7 +125,7 @@
           <source srcset="/img/photo-bridge-tablet@1x.jpg 1x, /img/photo-bridge-tablet@2x.jpg 2x"
                   media="(min-width: 768px)">
           <source srcset="/img/photo-bridge-mobile@2x.jpg 2x" media="(max-width: 767px)">
-          <img src="/img/photo-bridge-mobile@1x.jpg">
+          <img src="/img/photo-bridge-mobile@1x.jpg" alt="" width="320" height="260">
         </picture>
       </div>
     </div>
@@ -171,21 +170,21 @@
     <ul class="footer__social social">
       <li class="social__item">
         <a class="social__link" href="#">
-          <svg width="17.5px" height="14.663px">
+          <svg width="17.5" height="14.663">
             <use xlink:href="#icon-twitter"></use>
           </svg>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link" href="#">
-          <svg width="8.672px" height="18.944px">
+          <svg width="8.672" height="18.944">
             <use xlink:href="#icon-facebook"></use>
           </svg>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link" href="#">
-          <svg width="19.979px" height="14.015px">
+          <svg width="19.979" height="14.015">
             <use xlink:href="#icon-youtube"></use>
           </svg>
         </a>
@@ -194,7 +193,7 @@
     <div class="footer__development">
       <a class="footer__development-link" href="#" title="Разработано в HTML Academy">
         Разработано
-        <svg class="footer__development-img">
+        <svg class="footer__development-img" width="27" height="34">
           <use xlink:href="#logo-htmlacademy"></use>
         </svg>
       </a>
