исправление замечаний от случайного наставника

--- a/form.html
+++ b/form.html
@@ -54,16 +54,16 @@
     <div class="header__logo">
       <a href="/">
         <picture>
-          <source srcset="/img/logo-sedona-desktop.svg" media="(min-width: 1200px)">
-          <source srcset="/img/logo-sedona-tablet.svg" media="(min-width: 768px)">
-          <img src="/img/logo-sedona-mobile.svg" alt="" width="102" height="84">
+          <source srcset="./img/logo-sedona-desktop.svg" media="(min-width: 1200px)">
+          <source srcset="./img/logo-sedona-tablet.svg" media="(min-width: 768px)">
+          <img src="./img/logo-sedona-mobile.svg" alt="" width="102" height="84">
         </picture>
       </a>
     </div>
   </header>
   <section class="main-img main-img--inner-page">
     <div class="main-img__text">
-      <img src="/img/text-sedona.svg" alt="">
+      <img src="./img/text-sedona.svg" alt="" width="190" height="33">
     </div>
   </section>
   <section class="middle">
