--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
     <div class="header__logo">
       <a href="/">
         <picture>
-          <source srcset="/img/logo-sedona-desktop.svg" media="(min-width: 1200px)">
-          <source srcset="/img/logo-sedona-tablet.svg" media="(min-width: 768px)">
-          <img src="/img/logo-sedona-mobile.svg" alt="" width="102" height="84">
+          <source srcset="./img/logo-sedona-desktop.svg" media="(min-width: 1200px)">
+          <source srcset="./img/logo-sedona-tablet.svg" media="(min-width: 768px)">
+          <img src="./img/logo-sedona-mobile.svg" alt="" width="102" height="84">
         </picture>
       </a>
     </div>
   </header>
   <section class="main-img">
     <div class="main-img__text">
-      <img src="/img/text-sedona-index.svg" alt="" width="280" height="218">
+      <img src="./img/text-sedona-index.svg" alt="" width="280" height="218">
     </div>
   </section>
   <section class="intro">
@@ -83,11 +83,11 @@
       </div>
       <div class="info-item__img">
         <picture>
-          <source srcset="/img/photo-city@1x.jpg 1x, /img/photo-city@2x.jpg 2x" media="(min-width: 1200px)">
-          <source srcset="/img/photo-city-tablet@1x.jpg 1x, /img/photo-city-tablet@2x.jpg 2x"
+          <source srcset="./img/photo-city@1x.jpg 1x, ./img/photo-city@2x.jpg 2x" media="(min-width: 1200px)">
+          <source srcset="./img/photo-city-tablet@1x.jpg 1x, ./img/photo-city-tablet@2x.jpg 2x"
                   media="(min-width: 768px)">
-          <source srcset="/img/photo-city-mobile@2x.jpg 2x" media="(max-width: 767px)">
-          <img src="/img/photo-city-mobile@1x.jpg" alt="" width="320" height="260">
+          <source srcset="./img/photo-city-mobile@2x.jpg 2x" media="(max-width: 767px)">
+          <img src="./img/photo-city-mobile@1x.jpg" alt="" width="320" height="260">
         </picture>
       </div>
     </div>
@@ -121,11 +121,11 @@
       </div>
       <div class="info-item__img">
         <picture>
-          <source srcset="/img/photo-bridge@1x.jpg 1x, /img/photo-bridge@2x.jpg 2x" media="(min-width: 1200px)">
-          <source srcset="/img/photo-bridge-tablet@1x.jpg 1x, /img/photo-bridge-tablet@2x.jpg 2x"
+          <source srcset="./img/photo-bridge@1x.jpg 1x, ./img/photo-bridge@2x.jpg 2x" media="(min-width: 1200px)">
+          <source srcset="./img/photo-bridge-tablet@1x.jpg 1x, ./img/photo-bridge-tablet@2x.jpg 2x"
                   media="(min-width: 768px)">
-          <source srcset="/img/photo-bridge-mobile@2x.jpg 2x" media="(max-width: 767px)">
-          <img src="/img/photo-bridge-mobile@1x.jpg" alt="" width="320" height="260">
+          <source srcset="./img/photo-bridge-mobile@2x.jpg 2x" media="(max-width: 767px)">
+          <img src="./img/photo-bridge-mobile@1x.jpg" alt="" width="320" height="260">
         </picture>
       </div>
     </div>
