--- a/photo.html
+++ b/photo.html
@@ -55,16 +55,16 @@
     <div class="header__logo">
       <a href="/">
         <picture>
-          <source srcset="/img/logo-sedona-desktop.svg" media="(min-width: 1200px)">
-          <source srcset="/img/logo-sedona-tablet.svg" media="(min-width: 768px)">
-          <img src="/img/logo-sedona-mobile.svg" alt="" width="102" height="84">
+          <source srcset="./img/logo-sedona-desktop.svg" media="(min-width: 1200px)">
+          <source srcset="./img/logo-sedona-tablet.svg" media="(min-width: 768px)">
+          <img src="./img/logo-sedona-mobile.svg" alt="" width="102" height="84">
         </picture>
       </a>
     </div>
   </header>
   <section class="main-img main-img--inner-page">
     <div class="main-img__text">
-      <img src="/img/text-sedona.svg" alt="" width="190" height="33">
+      <img src="./img/text-sedona.svg" alt="" width="190" height="33">
     </div>
   </section>
   <section class="middle">
@@ -77,11 +77,11 @@
         <div class="photo__img">
           <a href="#">
             <picture>
-              <source srcset="/img/photo-1-desktop@1x.jpg 1x, /img/photo-1-desktop@2x.jpg 2x"
+              <source srcset="./img/photo-1-desktop@1x.jpg 1x, ./img/photo-1-desktop@2x.jpg 2x"
                       media="(min-width: 1200px)">
-              <source srcset="/img/photo-1-tablet@1x.jpg 1x, /img/photo-1-tablet@2x.jpg 2x" media="(min-width: 768px)">
-              <source srcset="/img/photo-1-mobile@2x.jpg 2x" media="(max-width: 767px)">
-              <img src="/img/photo-1-mobile@1x.jpg" alt="" width="280" height="280">
+              <source srcset="./img/photo-1-tablet@1x.jpg 1x, ./img/photo-1-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <source srcset="./img/photo-1-mobile@2x.jpg 2x" media="(max-width: 767px)">
+              <img src="./img/photo-1-mobile@1x.jpg" alt="" width="280" height="280">
             </picture>
           </a>
         </div>
@@ -104,11 +104,11 @@
         <div class="photo__img">
           <a href="#">
             <picture>
-              <source srcset="/img/photo-2-desktop@1x.jpg 1x, /img/photo-2-desktop@2x.jpg 2x"
+              <source srcset="./img/photo-2-desktop@1x.jpg 1x, ./img/photo-2-desktop@2x.jpg 2x"
                       media="(min-width: 1200px)">
-              <source srcset="/img/photo-2-tablet@1x.jpg 1x, /img/photo-2-tablet@2x.jpg 2x" media="(min-width: 768px)">
-              <source srcset="/img/photo-2-mobile@2x.jpg 2x" media="(max-width: 767px)">
-              <img src="/img/photo-2-mobile@1x.jpg" alt="" width="280" height="280">
+              <source srcset="./img/photo-2-tablet@1x.jpg 1x, ./img/photo-2-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <source srcset="./img/photo-2-mobile@2x.jpg 2x" media="(max-width: 767px)">
+              <img src="./img/photo-2-mobile@1x.jpg" alt="" width="280" height="280">
             </picture>
           </a>
         </div>
@@ -131,11 +131,11 @@
         <div class="photo__img">
           <a href="#">
             <picture>
-              <source srcset="/img/photo-3-desktop@1x.jpg 1x, /img/photo-3-desktop@2x.jpg 2x"
+              <source srcset="./img/photo-3-desktop@1x.jpg 1x, ./img/photo-3-desktop@2x.jpg 2x"
                       media="(min-width: 1200px)">
-              <source srcset="/img/photo-3-tablet@1x.jpg 1x, /img/photo-3-tablet@2x.jpg 2x" media="(min-width: 768px)">
-              <source srcset="/img/photo-3-mobile@2x.jpg 2x" media="(max-width: 767px)">
-              <img src="/img/photo-3-mobile@1x.jpg" alt="" width="280" height="280">
+              <source srcset="./img/photo-3-tablet@1x.jpg 1x, ./img/photo-3-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <source srcset="./img/photo-3-mobile@2x.jpg 2x" media="(max-width: 767px)">
+              <img src="./img/photo-3-mobile@1x.jpg" alt="" width="280" height="280">
             </picture>
           </a>
         </div>
@@ -158,11 +158,11 @@
         <div class="photo__img">
           <a href="#">
             <picture>
-              <source srcset="/img/photo-4-desktop@1x.jpg 1x, /img/photo-4-desktop@2x.jpg 2x"
+              <source srcset="./img/photo-4-desktop@1x.jpg 1x, ./img/photo-4-desktop@2x.jpg 2x"
                       media="(min-width: 1200px)">
-              <source srcset="/img/photo-4-tablet@1x.jpg 1x, /img/photo-4-tablet@2x.jpg 2x" media="(min-width: 768px)">
-              <source srcset="/img/photo-4-mobile@2x.jpg 2x" media="(max-width: 767px)">
-              <img src="/img/photo-4-mobile@1x.jpg" alt="" width="280" height="280">
+              <source srcset="./img/photo-4-tablet@1x.jpg 1x, ./img/photo-4-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <source srcset="./img/photo-4-mobile@2x.jpg 2x" media="(max-width: 767px)">
+              <img src="./img/photo-4-mobile@1x.jpg" alt="" width="280" height="280">
             </picture>
           </a>
         </div>
@@ -196,10 +196,10 @@
       </div>
       <div class="video__poster">
         <picture>
-          <source srcset="/img/video-desktop@1x.jpg 1x, /img/video-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-          <source srcset="/img/video-tablet@1x.jpg 1x, /img/video-tablet@2x.jpg 2x" media="(min-width: 768px)">
-          <source srcset="/img/video-mobile@2x.jpg 2x" media="(max-width: 767px)">
-          <img src="/img/video-mobile@1x.jpg" alt="" width="320" height="201">
+          <source srcset="./img/video-desktop@1x.jpg 1x, ./img/video-desktop@2x.jpg 2x" media="(min-width: 1200px)">
+          <source srcset="./img/video-tablet@1x.jpg 1x, ./img/video-tablet@2x.jpg 2x" media="(min-width: 768px)">
+          <source srcset="./img/video-mobile@2x.jpg 2x" media="(max-width: 767px)">
+          <img src="./img/video-mobile@1x.jpg" alt="" width="320" height="201">
         </picture>
       </div>
       <div class="video__controls">
